<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:scrollbars="none"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="16dp"
            android:paddingTop="16dp">

            <LinearLayout
                android:id="@+id/aboutLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="vertical"
                android:paddingStart="14dp"
                android:paddingTop="8dp"
                android:paddingEnd="14dp"
                android:paddingBottom="8dp">

                <TextView

                    android:id="@+id/textView17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="cursive"
                    android:text="@string/instagram_reels_downloader"
                    android:textAlignment="center"
                    android:textColor="@color/inkquoirPrimaryColor"
                    android:textSize="35sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="cursive"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/download_any_instagram_video_with_just_its_link"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/credentialLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/aboutLinearLayout"
                android:layout_marginBottom="8dp"
                android:orientation="vertical"
                android:paddingBottom="8dp"
                android:paddingEnd="24dp"
                android:paddingStart="24dp"
                android:paddingTop="8dp">


                <EditText
                    android:id="@+id/intagramUrlEditText"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/custom_edit_text"
                    android:ems="10"
                    android:hint="@string/enter_or_paste_the_url_of_the_video"
                    android:inputType="text"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/pasteVideoLinkButton"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/custom_button"
                        android:paddingEnd="8dp"
                        android:paddingStart="8dp"
                        android:text="@string/paste"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite" />

                    <Button
                        android:id="@+id/retrieveVideoButton"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/custom_button"
                        android:paddingEnd="8dp"
                        android:paddingStart="8dp"
                        android:text="@string/retrieve"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite" />

                    <Button
                        android:id="@+id/downloadVideoBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/custom_button"
                        android:paddingEnd="8dp"
                        android:paddingStart="8dp"
                        android:text="@string/download"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite" />


                </LinearLayout>

                <WebView
                    android:id="@+id/instagramVideoWebView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp" />



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/credentialLinearLayout"
                android:orientation="vertical"
                android:paddingEnd="24dp"
                android:paddingStart="24dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="15sp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="15sp"
                    android:background="#c2bebe" />

                <TextView
                    android:textColor="@color/inkquoirPrimaryColor"
                    android:id="@+id/textView21"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:text="@string/designed_and_coded_with_heart_by_n_ikhlaq_yousuf_malik"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingEnd="4dp"
                        android:paddingStart="4dp"
                        android:text="@string/ikhlaqmalik_si_gmail_com"
                        android:textAlignment="center"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingEnd="4dp"
                        android:paddingStart="4dp"
                        android:text="@string/_916005283498"
                        android:textAlignment="center"
                        android:textSize="16sp" />


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="24dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="15sp"
                    android:background="#c2bebe" />


                <TextView
                    android:padding="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/beautiful_things_for_beautiful_people"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:layout_marginBottom="15sp"/>



            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>



</ScrollView>
